fix up pom, ignore targets